[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/jean28518.jTools/jList/jList.tscn" type="PackedScene" id=1]
[ext_resource path="res://Editor/Scripts/editor_configuration.gd" type="Script" id=2]
[ext_resource path="res://Data/Fonts/FontMedium.tres" type="DynamicFont" id=3]
[ext_resource path="res://Data/UI/styles/panel_background.tres" type="StyleBox" id=5]
[ext_resource path="res://Data/UI/colored_item_list.gd" type="Script" id=6]
[ext_resource path="res://Data/UI/styles/item_list.tres" type="Theme" id=7]
[ext_resource path="res://Data/UI/styles/button_right.tres" type="Theme" id=8]
[ext_resource path="res://Data/UI/styles/button_center.tres" type="Theme" id=9]
[ext_resource path="res://Data/UI/styles/line_edit.tres" type="Theme" id=11]
[ext_resource path="res://Data/UI/styles/button_left.tres" type="Theme" id=12]

[node name="Editor_Configuration" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 6.0
margin_top = 10.0
margin_right = 794.0
margin_bottom = 596.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 788.0
margin_bottom = 49.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_top = 2.0
margin_right = 283.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ABSOLUTE_EDITOR_PATH: "

[node name="EditorPath" type="LineEdit" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 287.0
margin_right = 661.0
margin_bottom = 49.0
size_flags_horizontal = 3
theme = ExtResource( 11 )
custom_colors/selection_color = Color( 0.45098, 0.843137, 0.819608, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0.27451, 0.286275, 0.360784, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Hallo Welt"
caret_blink = true
caret_blink_speed = 0.5

[node name="UpdateEditorPathButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 665.0
margin_right = 788.0
margin_bottom = 49.0
theme = ExtResource( 8 )
custom_fonts/font = ExtResource( 3 )
text = "UPDATE"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 788.0
margin_bottom = 58.0
rect_min_size = Vector2( 0, 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TracksList" parent="PanelContainer/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 62.0
margin_right = 788.0
margin_bottom = 586.0
size_flags_vertical = 3
multi_selection_allowed = false
custom_font_path = "res://Data/Fonts/FontMedium.tres"
enable_remove_button = false
enable_rename_button = true
enable_action_button = true
add_button_text = "NEW"
remove_button_text = "REMOVE"
rename_button_text = "RENAME"
duplicate_button_text = "DUPLICATE"
action_button_text = "OPEN"

[node name="ItemList" parent="PanelContainer/VBoxContainer/TracksList/VBoxContainer" index="0"]
margin_right = 788.0
margin_bottom = 471.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 3 )
select_mode = 0
script = ExtResource( 6 )

[node name="HBoxContainer" parent="PanelContainer/VBoxContainer/TracksList/VBoxContainer" index="1"]
margin_top = 475.0
margin_right = 788.0
margin_bottom = 524.0

[node name="Back" type="Button" parent="PanelContainer/VBoxContainer/TracksList/VBoxContainer/HBoxContainer" index="0"]
margin_right = 99.0
margin_bottom = 49.0
theme = ExtResource( 12 )
text = "BACK"
align = 0

[node name="LineEdit" parent="PanelContainer/VBoxContainer/TracksList/VBoxContainer/HBoxContainer" index="1"]
margin_left = 103.0
margin_right = 539.0
margin_bottom = 49.0
theme = ExtResource( 11 )
custom_fonts/font = ExtResource( 3 )

[node name="Add" parent="PanelContainer/VBoxContainer/TracksList/VBoxContainer/HBoxContainer" index="2"]
margin_left = 543.0
margin_right = 593.0
margin_bottom = 49.0
theme = ExtResource( 9 )
custom_fonts/font = ExtResource( 3 )
text = "NEW"

[node name="Remove" parent="PanelContainer/VBoxContainer/TracksList/VBoxContainer/HBoxContainer" index="3"]
visible = false
custom_fonts/font = ExtResource( 3 )
text = "REMOVE"

[node name="Rename" parent="PanelContainer/VBoxContainer/TracksList/VBoxContainer/HBoxContainer" index="4"]
visible = true
margin_left = 597.0
margin_right = 688.0
margin_bottom = 49.0
theme = ExtResource( 9 )
custom_fonts/font = ExtResource( 3 )
text = "RENAME"

[node name="Duplicate" parent="PanelContainer/VBoxContainer/TracksList/VBoxContainer/HBoxContainer" index="5"]
margin_left = 557.0
margin_right = 688.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 3 )
text = "DUPLICATE"

[node name="Copy" parent="PanelContainer/VBoxContainer/TracksList/VBoxContainer/HBoxContainer" index="6"]
custom_fonts/font = ExtResource( 3 )

[node name="Paste" parent="PanelContainer/VBoxContainer/TracksList/VBoxContainer/HBoxContainer" index="7"]
custom_fonts/font = ExtResource( 3 )

[node name="Save" parent="PanelContainer/VBoxContainer/TracksList/VBoxContainer/HBoxContainer" index="8"]
custom_fonts/font = ExtResource( 3 )

[node name="Action" parent="PanelContainer/VBoxContainer/TracksList/VBoxContainer/HBoxContainer" index="9"]
visible = true
margin_left = 692.0
margin_right = 788.0
margin_bottom = 49.0
theme = ExtResource( 8 )
custom_fonts/font = ExtResource( 3 )
text = "OPEN"

[node name="Label" parent="PanelContainer/VBoxContainer/TracksList/PopupDialog" index="0"]
custom_fonts/font = ExtResource( 3 )

[node name="Okay" parent="PanelContainer/VBoxContainer/TracksList/PopupDialog" index="1"]
custom_fonts/font = ExtResource( 3 )

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/UpdateEditorPathButton" to="." method="_on_UpdateEditorPathButton_pressed"]
[connection signal="user_added_entry" from="PanelContainer/VBoxContainer/TracksList" to="." method="_on_TracksList_user_added_entry"]
[connection signal="user_pressed_action" from="PanelContainer/VBoxContainer/TracksList" to="." method="_on_TracksList_user_pressed_action"]
[connection signal="user_renamed_entry" from="PanelContainer/VBoxContainer/TracksList" to="." method="_on_TracksList_user_renamed_entry"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TracksList/VBoxContainer/HBoxContainer/Back" to="." method="_on_Back_pressed"]

[editable path="PanelContainer/VBoxContainer/TracksList"]
